--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body {
-    font-family:'Poppins', sans-serif
-}
+    background-color: powderblue;
+  }
+  h1 {
+    color: blue;
+  }
+  p {
+    color: red;
+  }
