--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,13 @@ body {
   title {
     color:aqua;
   }
+  p6 {
+    color:green;
+  }
   h1 {
     color: blue;
   }
   h2 {
     color: red;
   }
+  
