--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-header {
-    background-color: grey;
-  }
+
 body {
-    background-color: powderblue;
+    background-color: black;
   }
 
   title {
