--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-items: flex-start;
   align-items: center;
 }
 
