--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
   border: 8px solid black;
   display: flex;
   flex-direction: row;
-  justify-items: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
