--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
+  flex-direction: column re;
   justify-content: space-evenly;
   align-items: center;
 }
