--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
-  flex-direction: column-reverse;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
