--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
-  align-items: center;
+  align-content: center;
   flex-wrap: wrap;
   justify-content: space-evenly;
   
