--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,11 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
+  gap: 20px;
   flex-wrap: wrap;
-  align-content: center;
   justify-content: space-evenly;
+  align-items: center;
+  
   
 }
 
