--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,11 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
+  flex-direction: row-reverse;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  
-  
 }
 
 .box{
