--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,8 @@ body{
   min-height: 800px;
   border: 8px solid black;
   display: flex;
-  flex-direction: row-reverse;
   gap: 20px;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: space-evenly;
   align-items: center;
 }
