--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
   border: 8px solid black;
   display: flex;
   gap: 20px;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
 }
