--- a/styles.css
+++ b/styles.css
@@ -13,4 +13,6 @@ body{
   width: 200px;
   background-color: rgb(0, 195, 255);
   font-size: 40pt;
+  justify-content: center;
+  align-items: center;
 }
