--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,5 @@ body{
   width: 200px;
   background-color: rgb(0, 195, 255);
   font-size: 40pt;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: auto;
 }
