--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,12 @@ body{
   font-size: 40pt;
   
 }
+
+.test .box{
+  height: 200px;
+  width: 200px;
+  background-color: rgb(255, 0, 0);
+  text-align: center;
+  font-size: 40pt;
+  
+}
