--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,10 @@ body{
   
 }
 
-.test .box{
+.test{
   height: 200px;
   width: 200px;
   background-color: rgb(255, 0, 0);
   text-align: center;
   font-size: 40pt;
-  
 }
