--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
 .box{
   height: 200px;
   width: 200px;
+  border-radius: 15px;
   background-color: rgb(0, 195, 255);
   text-align: center;
   font-size: 40pt;
@@ -20,6 +21,7 @@ body{
 .box2{
   height: 200px;
   width: 200px;
+  border-radius: 15px;
   background-color: rgb(255, 0, 0);
   text-align: center;
   font-size: 40pt;
