--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
   border: 8px solid black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
