--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body{
   border-radius: 20px;
   min-height: 800px;
   border: 8px solid black;
+  gap: 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
