--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
   background-color: rgb(0, 195, 255);
   text-align: center;
   font-size: 40pt;
+  border-radius: 25px;
 }
 
 .box2{
@@ -24,4 +25,5 @@ body{
   background-color: rgb(255, 0, 0);
   text-align: center;
   font-size: 40pt;
+  border-radius: 25px;
 }
