--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
   min-height: 600px;
   border: 8px solid black;
-  gap: 20px;
+  gap: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -14,16 +14,54 @@ body{
   border-radius: 25px;
   height: 200px;
   width: 200px;
-  background-color: rgb(0, 195, 255);
+  background-color: rgb(0, 110, 255);
   text-align: center;
   font-size: 40pt;
 }
 
+
+.box1{
+  height: 200px;
+  width: 400px;
+  background-color: rgb(255, 196, 0);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
+}
+
 .box2{
   height: 200px;
+  width: 400px;
   background-color: rgb(255, 0, 0);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
-  width: 400px;
 }
+
+.box3{
+  height: 200px;
+  width: 400px;
+  background-color: rgb(153, 0, 255);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
+}
+
+.box4{
+  height: 200px;
+  width: 400px;
+  background-color: rgb(0, 255, 60);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
+}
+
+.box2{
+  height: 200px;
+  width: 200px;
+  background-color: rgb(170, 246, 255);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
+}
+
