--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,9 @@ body{
   height: 200px;
   width: 400px;
   background-color: rgb(255, 196, 0);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
 }
 
 .box2{
