--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
   border-radius: 25px;
   height: 200px;
   width: 200px;
-  background-color: rgb(0, 110, 255);
+  background-image: linear-gradient(rgb(83, 126, 255),blue);
   text-align: center;
   font-size: 40pt;
 }
