--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
 .box1{
   height: 200px;
   width: 400px;
-  background-color: rgb(255, 196, 0);
+  background-color: linear-gradient(rgb(255, 196, 0), orange);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
@@ -32,7 +32,7 @@ body{
 .box2{
   height: 200px;
   width: 400px;
-  background-color: rgb(255, 0, 0);
+  background-color: linear-gradient(rgb(255, 89, 0), red );
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
