--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
 .box3{
   height: 200px;
   width: 400px;
-  background-color: rgb(153, 0, 255);
+  background-color: linear-gradient(rgb(207, 134, 255),purple);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
@@ -50,7 +50,7 @@ body{
 .box4{
   height: 200px;
   width: 400px;
-  background-color: rgb(0, 255, 60);
+  background-color: linear-gradient(rgb(134, 253, 162), rgb(0, 255, 0));
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
@@ -59,7 +59,7 @@ body{
 .box5{
   height: 200px;
   width: 200px;
-  background-color: rgb(170, 246, 255);
+  background-color: linear-gradient(rgb(233, 254, 255), rgb(170, 246, 255));
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
