--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
   border-radius: 25px;
   height: 200px;
   width: 200px;
-  background-image: linear-gradient(rgb(83, 126, 255),blue);
+  background-image: linear-gradient(to bottom right,rgb(83, 126, 255),blue);
   text-align: center;
   font-size: 40pt;
 }
@@ -32,7 +32,7 @@ body{
 .box2{
   height: 200px;
   width: 400px;
-  background-color: linear-gradient(rgb(255, 89, 0), red );
+  background-color: linear-gradient(rgb(255, 89, 0), red);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
