--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-body{
-  min-height: 600px;
-  max-width: 300px;
+.flex-container{
+  height: 600;
+  width: 600;
   margin-top: 100px;
   border: 8px solid black;
   gap: 10px;
