--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .flex-container{
-  height: 600;
-  width: 600;
+  height: 600px;
+  width: 600px;
   margin-top: 100px;
   border: 8px solid black;
   gap: 10px;
