--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
 .flex-container{
-  width: 600px;
-  margin-top: 100px;
-  border: 8px solid black;
+  
   gap: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
 }
-
-
+.flex-container div {
+  width: 600px;
+  margin-top: 100px;
+  border: 8px solid black;
+}
 .box{
   border-radius: 25px;
   height: 200px;
