--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
-.flex-container{
+body{
+  min-height: 600px;
+  margin-top: 100px;
+  margin-right: 100px;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-}
-.flex-container div {
-  width: 600px;
-  min-height: 600px;
-  margin-top: 100px;
   border: 8px solid black;
 }
 .box{
