--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ body{
   margin-top: 100px;
   margin-right: 100px;
   border: 8px solid black;
-  
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .box{
