--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body{
+  min-height: 600px;
+  margin: 100px;
   border: 8px solid black;
-  
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
 
 .box{
   border-radius: 25px;
