--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body{
-  min-height: 100px;
   border: 8px solid black;
   gap: 10px;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   margin: 100px;
+  margin-bottom: 300px
 }
 
 
