--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
   justify-content: space-evenly;
   align-items: center;
   margin: 100px;
-  margin-bottom: 300px
+  margin-bottom: 300px;
 }
 
 
