--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body{
   border: 8px solid black;
-  gap: 10px;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   margin: 100px;
 }
 
