--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@ body{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin: 100px;
+  margin-bottom:500px;
 }
 
 
