--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  margin: 300px;
+  margin: 100px;
+  margin-bottom: 200px;
   flex-direction: row;
 }
 
