--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
+  background-color: #636363;
   border: 8px solid black;
   display: flex;
   flex-wrap: wrap;
@@ -6,7 +7,6 @@ body{
   justify-content: space-around;
   margin: 100px;
   margin-bottom: 200px;
-  flex-direction: row;
 }
 
 
@@ -32,7 +32,7 @@ body{
 .box2{
   height: 200px;
   width: 400px;
-  background-image: linear-gradient(to bottom right,rgb(255, 89, 0), red);
+  background-image: linear-gradient(to bottom right,#ff6c6c,#ff5900, red);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
