--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
 .box3{
   height: 200px;
   width: 400px;
-  background-image: linear-gradient(to bottom right,rgb(255, 184, 255),rgb(207, 134, 255),purple);
+  background-image: linear-gradient(to right,rgb(255, 184, 255),rgb(207, 134, 255),purple);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
