--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+header{
+  height: 200px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  border: 8px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin: 100px;
+  margin-bottom: 200px;
+}
+
 body{
   background-color: rgb(13, 10, 40);
   border: 8px solid black;
