--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-header{
+head{
   height: 200px;
   width: 100%;
   background-color: rgb(255, 255, 255);
@@ -7,8 +7,7 @@ header{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  margin: 100px;
-  margin-bottom: 200px;
+
 }
 
 body{
