--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ head{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  border-radius: 50px;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
 }
 
 body{
@@ -18,7 +19,6 @@ body{
   justify-content: space-around;
   margin: 100px;
   margin-bottom: 200px;
-  border-radius: 50px;
 }
 
 
