--- a/styles.css
+++ b/styles.css
@@ -8,19 +8,31 @@ head{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  border: 8px solid black; 
 }
-
 .dot {
   height: 25px;
   width: 25px;
   border-radius: 50%;
   display: inline-flex;
-  transform: translate(50px, -70px);
+  transform: translate(50px, -60px);
   margin-left: 5px;
   background-color: blue;
 }
-
+h1{
+  transform: translate(400px, -118px);
+  color:#666877;
+  font-style:italic;
+  font-size: 30px;
+  animation: animate-size 4s ease-in-out infinite;
+  animation-direction: alternate;
+}
+@keyframes animate-size {
+  to{
+    font-size: 25px;
+    
+  }
+  
+}
 .dot.red {
   background-color: #ed7172;
 }
@@ -43,7 +55,6 @@ head{
 }
 body{
   background-color: #2a2d3e;
-  display: flex:
 }
 
 
