--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,39 @@ head{
   background-color: blue;
 }
 h1{
-  transform: translate(400px, -118px);
+  transform: translate(350px, -140px);
   color:#666877;
   font-style:italic;
-  font-size: 30px;
-  animation: animate-size 4s ease-in-out infinite;
-  animation-direction: alternate;
+  font-size: 50px;
 }
+
+h1:hover{
+  animation: animate-size 2.5s linear infinite;
+  animation-direction: alternate;
+  background-image: linear-gradient(to right,#fdad81,#ff2c53,red,#fdad81);
+  background-clip:text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size:200%;
+  position:relative;
+}
+h1:hover::before{
+  content:"hover everything";
+  position:absolute;
+  top:0%;
+  width:100%;
+  height:100%;
+  -webkit-background-clip: text;
+  animation: animate-size 2.5s linear infinite;
+  animation-direction: alternate;
+  background-image: linear-gradient(to right,#fdad81,#ff2c53,red,#fdad81);
+  background-size:200%;
+  filter: blur(20px);
+}
+
 @keyframes animate-size {
   to{
-    font-size: 25px;
-    
+    background-position:200%;
   }
   
 }
@@ -50,7 +72,8 @@ h1{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  margin: 100px;
+  margin-right: 100px;
+  margin-left: 100px;
   margin-bottom: 200px;
 }
 body{
