--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ head{
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+  
 }
 .dot {
   height: 25px;
@@ -63,10 +64,29 @@ h1:hover::before{
 .dot.green {
   background-color: #6cd962;
 }
+.flip-card {
+  background-color: transparent;
+  width: 200px;
+  height: 200px;
+  perspective: 1000px;
+}
+
+
+.flip-card:hover .box2 {
+  transform: rotateX(180deg);
+}
+
+.box2, .box6 {
+  position: relative;
+  
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
 
 
 .flex-container{
   display: flex;
+  gap:50px;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
@@ -96,6 +116,7 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
+  
 }
 
 .box2{
@@ -105,6 +126,10 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin-left:-100px;
 }
 
 .box3{
@@ -129,10 +154,20 @@ body{
 
 .box5{
   height: 200px;
-  width: 200px;
+  width: 400px;
   background-image: linear-gradient(to bottom right, #fbfbde,#81ffed);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
 }
 
+.box6{
+  height: 200px;
+  width: 400px;
+  background-image: linear-gradient(to bottom right, #5b5b5b,#d70000);
+  text-align: center;
+  font-size: 40pt;
+  border-radius: 25px;
+  transform: rotateX(180deg);
+  
+  
