--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ head{
   justify-content: space-around;
   
 }
+body{
+  background-color: #2a2d3e;
+}
 .dot {
   height: 25px;
   width: 25px;
@@ -18,6 +21,15 @@ head{
   transform: translate(50px, -60px);
   margin-left: 5px;
   background-color: blue;
+}
+.dot.red {
+  background-color: #ed7172;
+}
+.dot.yellow {
+  background-color: #fdc264;
+}
+.dot.green {
+  background-color: #6cd962;
 }
 h1{
   transform: translate(350px, -140px);
@@ -55,15 +67,7 @@ h1:hover::before{
   }
   
 }
-.dot.red {
-  background-color: #ed7172;
-}
-.dot.yellow {
-  background-color: #fdc264;
-}
-.dot.green {
-  background-color: #6cd962;
-}
+
 .flip-card {
   background-color: transparent;
   width: 200px;
@@ -73,7 +77,7 @@ h1:hover::before{
 
 
 .flip-card:hover .box2 {
-  transform: rotateX(180deg);
+  transform: rotateY(1260deg);
 }
 
 .box2, .box6 {
@@ -84,30 +88,35 @@ h1:hover::before{
 }
 
 
-.flex-container{
-  display: flex;
-  gap:50px;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  margin-right: 100px;
-  margin-left: 100px;
-  margin-bottom: 200px;
-}
-body{
-  background-color: #2a2d3e;
-}
-
 
 .box{
   border-radius: 25px;
   height: 200px;
   width: 400px;
-  background-image: linear-gradient(to bottom right,#88d7fd,#756ffb);
+  background:#666877;
   text-align: center;
   font-size: 40pt;
+  margin:50px;
 }
-
+.box:hover{
+  animation: animate-size 2.5s linear infinite;
+  background-image: linear-gradient(to right,#88d7fd,#756ffb,#88d7fd);
+  background-size:200%;
+  position:relative;
+}
+.box:hover::before{
+  content:"hover everything";
+  position:absolute;
+  top:0%;
+  width:100%;
+  height:100%;
+  transform: translate(-130px);
+  animation: animate-size 2.5s linear infinite;
+  background-image: linear-gradient(to bottom right,#88d7fd,#756ffb,#88d7fd);
+  background-size:200%;
+  filter: blur(20px);
+  z-index:-1;
+}
 
 .box1{
   height: 200px;
@@ -116,7 +125,7 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
-  
+  margin:50px;
 }
 
 .box2{
@@ -129,7 +138,7 @@ body{
   transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  margin-left:-100px;
+  margin:50px;
 }
 
 .box3{
@@ -139,7 +148,7 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
-  
+  margin:50px;
 }
 
 .box4{
@@ -149,16 +158,17 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
-  
+  margin:50px;
 }
 
 .box5{
   height: 200px;
   width: 400px;
-  background-image: linear-gradient(to bottom right, #fbfbde,#81ffed);
+  background-image: linear-gradient(to bottom right, #ff5900,#81ffed);
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
+  margin:50px;
 }
 
 .box6{
@@ -169,6 +179,5 @@ body{
   text-align: center;
   font-size: 40pt;
   border-radius: 25px;
-  transform: rotateX(180deg);
-  
+  transform: rotateY(1260deg);
 }
